# ILI9341_Driver_for_AzureSphereSK

./: LICENSE  README.md
AzSphere_ILI9341_Test/: launch.vs.json
AzSphere_ILI9341_Test/HighLevelCore/: CMakeLists.txt  CMakeSettings.json  ILI9341_AzSphere_driver.c  ILI9341_AzSphere_driver.h  app_manifest.json  launch.vs.json  main.c
AzSphere_ILI9341_Test/RealTimeCore/: CMakeLists.txt  app_manifest.json  launch.vs.json
